HelloUltraviolet/Fixtures/RejectedSource/Procedures/MethodLookupDiagnostics/Source/Main.uv
//! Rejected method-lookup specimen for required method lookup diagnostics.

public record MethodLookupDiagnosticOwner {
    public value: i32
}

public procedure methodLookupDiagnosticsReference() -> i32 {
    let owner: MethodLookupDiagnosticOwner = MethodLookupDiagnosticOwner { value: 3 }
    return owner~>missingMethod()
}
